--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-
     "build-css": "npx tailwindcss -i ./tailwind.css -o ./src/index.css"
   },
   "eslintConfig": {
@@ -42,7 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
