--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "autoprefixer": "^10.3.7",
     "firebase": "^9.1.3",
+    "postcss": "^8.3.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1",
-    "autoprefixer": "^10.3.7",
-    "postcss": "^8.3.11",
-    "tailwindcss": "^2.2.17"
+    "react-xarrows": "^2.0.2",
+    "tailwindcss": "^2.2.17",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
