--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://mirandevel.github.io/board",
   "name": "board",
   "version": "0.1.0",
   "private": true,
@@ -23,6 +24,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build-css": "npx tailwindcss -i ./tailwind.css -o ./src/index.css"
   },
   "eslintConfig": {
