--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "homepage": "https://mirandevel.github.io/board",
+  "homepage": "https://mirandevel.github.io/boardSoft",
   "name": "board",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "autoprefixer": "^10.3.7",
-    "firebase": "^9.1.3",
-    "postcss": "^8.3.11",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-draggable": "^4.4.4",
-    "react-router-dom": "^5.3.0",
+    "@testing-library/jest-dom": "5.11.4",
+    "@testing-library/react": "11.1.0",
+    "@testing-library/user-event": "12.1.10",
+    "autoprefixer": "10.3.7",
+    "express": "4.17.2",
+    "firebase": "9.1.3",
+    "postcss": "8.3.11",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-draggable": "4.4.4",
+    "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
-    "react-xarrows": "^2.0.2",
-    "tailwindcss": "^2.2.17",
-    "web-vitals": "^1.0.1"
+    "react-xarrows": "2.0.2",
+    "tailwindcss": "2.2.17",
+    "web-vitals": "1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,6 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {}
+  }
 }
